# CppTemplate

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: ExampleTests.cpp.3B62AD26AC41A8C7.idx  Greeter.cpp.BE8DBB3625B0871B.idx  Greeter.h.85AADCAE762D145B.idx  Greeter.hpp.83EF0DDC6E5CBF4B.idx  main.cpp.16C77EADEFCD111F.idx  main.cpp.86663FF8F5BB94C5.idx
include/: Greeter.hpp
src/: Greeter.cpp  main.cpp
tests/: CMakeLists.txt  ExampleTests.cpp
